# idletypecheck

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ci.sh  pyproject.toml
src/idletypecheck/: __init__.py  extension.py
tests/: test_utils.py
